--- a/style.css
+++ b/style.css
@@ -1,24 +1,52 @@
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
+/* Color Theme Swatches in Hex */
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-1-hex { color: #09060D; }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-2-hex { color: #4EA64B; }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-3-hex { color: #367334; }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-4-hex { color: #BF926B; }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-5-hex { color: #A62929; }
+
+/* Color Theme Swatches in RGBA */
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-1-rgba { color: rgba(9, 5, 12, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-2-rgba { color: rgba(77, 165, 74, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-3-rgba { color: rgba(53, 114, 51, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-4-rgba { color: rgba(191, 146, 107, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-5-rgba { color: rgba(165, 41, 41, 1); }
+
+/* Color Theme Swatches in HSLA */
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-1-hsla { color: hsla(270, 37, 3, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-2-hsla { color: hsla(118, 37, 47, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-3-hsla { color: hsla(118, 37, 32, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-4-hsla { color: hsla(28, 39, 58, 1); }
+.Padded-Cassette-by-Bottega-Veneta-/-Exploration-Visuals-5-hsla { color: hsla(0, 60, 40, 1); }
+
 body{
+    padding: 0;
     margin: 0;
-    font-family: 'Amatic SC', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     color: white;
 }
 
-.wrapper{
+
+
+/* HEADER */
+
+.header-wrapper{
     height: 100vh;
-    width: 100vw;
-    background: linear-gradient(-45deg, #5E0878, #085078, #4CA59B, #1FA194);
-    background-size: 400% 400%;
+    width: 100%;
+    background-image: url('./pictures/background/backgorund-web.png');
+    background-size: 120%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    animation: backgroundTransition 8s ease-in-out infinite;
-
+    position: relative;
+    animation: backgroundTransition 10s ease-in-out infinite;
 }
 
 h1{
+    color: #A62929;
     text-transform: uppercase;
     letter-spacing: 4px;
 }
@@ -32,9 +60,10 @@ h2{
     display: flex;
 }
 
-a{
+.social-media a{
     text-decoration: none;
-    color: white;
+    color: #09060D;
+
     font-size: 24px;
     padding: 1rem 4rem;
     border: 1px solid white;
@@ -42,23 +71,359 @@ a{
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: .5s cubic-bezier(0.55, 0.025, 0.675, 0.97);
+    transition: .5s cubic-bezier(.55, .025, .675, .97);
 }
 
 a:hover{
-    color: #085078;
-    background-color: white;
+    color: #A62929;
+    background-color: #09060D;
 }
 
-@keyframes backgroundTransition{
+@keyframes backgroundTransition {
+
     0%{
         background-position: 0% 80%;
     }
+
     50%{
         background-position: 80% 100%;
     }
+
     100%{
         background-position: 0% 90%;
     }
+    
 }
 
+/* MENU DE HAMBURGUER */
+
+.checkbox-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox{
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 9999;
+    transition: 400ms ease-in-out 0s;
+}
+
+.checkbox .trace{
+    width: 50px;
+    height: 2px;
+    background-color: white;
+    position: absolute;
+    border-radius: 4px;
+    transition: 0.5 ease-in-out;
+}
+
+.checkbox .trace:nth-child(1){
+    top: 26px;
+    transform: rotate(0);
+}
+.checkbox .trace:nth-child(2){
+    top: 46px;
+    transform: rotate(0);
+}
+.checkbox .trace:nth-child(3){
+    top: 66px;
+    transform: rotate(0);
+}
+
+#toggle{
+    display: none;
+}
+
+/* MENU */
+
+.menu{
+    position: absolute;
+    top: 28px;
+    right: 30px;
+    background: transparent;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 0px white;
+    z-index: -1;
+    transition: 400ms ease-in-out 0s;
+}
+
+.menu-items{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    transition: 400ms ease-in-out 0s;
+}
+
+.menu-items ul{
+    list-style-type: none;
+}
+
+.menu-items ul li a{
+    margin: 10px 0;
+    color: #BF926B;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-size: 40px;
+}
+
+/* ANIMAÇÃO DO MENU */
+
+#toggle:checked + .checkbox .trace:nth-child(1){
+    transform: rotate(45deg);
+    background-color: #BF926B;
+    top: 47px;
+}
+#toggle:checked + .checkbox .trace:nth-child(2){
+    transform: translate(-100px);
+    width: 30px;
+    visibility: hidden;
+    opacity: 0;
+}
+#toggle:checked + .checkbox .trace:nth-child(3){
+    transform: rotate(-45deg);
+    background-color: #BF926B;
+    top: 48px;
+}
+
+#toggle:checked + .checkbox{
+    background-color: white;
+}
+
+#toggle:checked ~.menu{
+    box-shadow: 0px 0px 0px 100vmax;
+    z-index: 1;
+}
+
+#toggle:checked ~.menu-items{
+    visibility: visible;
+    opacity: 1;
+}
+
+/*Home section styling*/
+
+.home{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100vh;
+    min-height: 500px;
+    color: #000;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.home .max-width{
+    margin: auto 0 auto 40px;
+}
+
+.home .home-content{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.home .home-content .text-1{
+    font-size: 27px;
+}
+.home .home-content .text-2{
+    font-size: 75px;
+    font-weight: 600;
+    margin-left: -3px;
+}
+.home .home-content .text-3{
+    font-size: 40px;
+    margin: 5px 0;
+}
+.home .home-content .text-3 span{
+    color: crimson;
+    font-weight: 500;
+}
+.home .img-pietro{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Image Size */
+
+.home img{
+    width: 300px;
+}
+
+/* CARDS */
+
+.container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 3rem 0;
+    color: #000;
+
+}
+
+.card-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.card{
+    height: 300px;
+    width: 400px;
+    margin: 3rem 0 0;
+    background-image: url('./pictures/background/background-card.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: grayscale(0.5);
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.card-text{
+    width: 40%;
+    font-family: sans-serif;
+    letter-spacing: 1px;
+    color: rgb(109,109,109);
+}
+
+.card-wrapper{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.card-wrapper::before{
+    content: '';
+    position: absolute;
+    height: 100px;
+    width: 100px;
+    display: block;
+    border: 1px solid #ffffff;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.card-wrapper h2{
+    font-size: 40px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    margin: 0;
+    transition: 0.3s;
+}
+
+.card-wrapper p{
+    font-size: 0;
+    visibility: hidden;
+    opacity: 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: 0.3s;
+}
+
+.card:hover{
+    filter: unset;
+}
+
+.card:hover > .card-wrapper::before{
+    opacity: 1;
+    width: 350px;
+    height: 250px;
+}
+.card:hover > .card-wrapper p{
+    font-size: 14px;
+    opacity: 1;
+    visibility: visible;
+}
+
+/* FOOTER */
+
+.footer{
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #09060D;
+}
+
+/* RESPONSIVIDADE */
+
+@media (max-width: 800px) {
+    .social-media{
+        display: flex;
+        flex-direction: column;
+    }
+
+.home img{
+        visibility: hidden;
+    }
+.home .home-content .text-1{
+    font-size: 13px;
+}
+.home .home-content .text-2{
+    font-size: 27px;
+}
+.home .home-content .text-3{
+    font-size: 20px;
+}
+
+    .container {
+        margin-top: 0;
+    }
+
+    .card-container{
+        flex-direction: column;;
+    }
+
+    .container .card-container:nth-child(1),
+    .container .card-container:nth-child(3){
+        flex-direction: column-reverse;
+    }
+
+    .card{
+        height: 250px;
+        width: 250px;
+    }
+
+    .card-text{
+        width: 90%;
+        margin-top: 2rem;
+        text-align: center;
+    }
+
+    .card:hover > .card-wrapper::before{
+        height: 190px;
+        width: 190px;
+    }
+}
